# pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.h  camera.h~  lights.h  main.cpp  materials.h  math.cpp  math.h  object.cpp  objects.h  progress.h  scene.cpp  scene.h  util.h  wavefront.h
examples/: dragon.mtl  redcube.mtl  untitled.mtl
